# example-python-project

./: .gitignore  Example-0.1.0-py3-none-any.whl  LICENCE.txt  README.rst  environment.yml  pyproject.toml  tox.ini
.github/workflows/: test.yml  tox.yml
docs/source/: conf.py  example.rst  index.rst  ipsum.rst
src/Example/: __init__.py  example.py
tests/: test_example.py
