[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "Example"
version = "0.1.0"
description = "Example package to demonstrate basic PyTest functionality"
authors = [ {name="James Frost", email="james.frost@metoffice.gov.uk"} ]
readme = "README.rst"
requires-python = ">=3.6"
# dependencies = []

