[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "Example"
version = "0.1.0"
description = "Example package to demonstrate basic PyTest functionality"
authors = [ {name="James Frost", email="james.frost@metoffice.gov.uk"} ]
readme = "README.rst"
requires-python = ">=3.6"
# dependencies = []

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    ]
pythonpath = [
  "src"
    ]

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py37, py38, py39, py310, py311
isolated_build = True

[testenv]
# install testing framework
# ... or install anything else you might need for testing here
deps = pytest

# run the tests
# ... or run any other command line tool you need to run here
commands = pytest

[testenv:docs]
description = invoke sphinx-build to build the HTML docs
basepython = python3
deps = sphinx
commands = sphinx-build -d "{toxworkdir}/docs_doctree" docs/source "docs/build" --color -W -bhtml {posargs}
           python -c 'import pathlib; print("documentation available under file://\\{0\\}".format(pathlib.Path(r"{toxworkdir}") / "docs_out" / "index.html"))'

[gh-actions]
python =
    3.7: py37
    3.8: py38
    3.9: py39
    3.10: py310
    3.11: py3.11
"""

